--- a/Ziyarat.html
+++ b/Ziyarat.html
@@ -5,41 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bay Area Ziyarah Trip 2025/2026 Registration</title>
 
-  <!-- Google Fonts for an Islamic feel -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Amiri&family=Scheherazade&display=swap"
-    rel="stylesheet"
-  >
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Scheherazade&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap 5 CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Flatpickr CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
-    rel="stylesheet"
-  >
+  <!-- Flatpickr -->
+  <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
 
   <style>
     :root {
-      --bs-primary: #004225;    /* deep green */
-      --bs-secondary: #D4AF37;  /* gold */
+      --bs-primary: #004225;
+      --bs-secondary: #D4AF37;
     }
     body {
       font-family: 'Amiri', serif;
-      background:
-        url('https://i.imgur.com/ZOo6X3Z.png') center/150px auto repeat;
+      background: url('https://i.imgur.com/ZOo6X3Z.png') center/150px repeat;
       color: #333;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
+      padding: 1rem 0;
     }
     header {
-      background:
-        var(--bs-primary)
-        url('https://i.imgur.com/your-calligraphy.jpg') center/cover no-repeat;
+      background: var(--bs-primary) url('https://i.imgur.com/your-calligraphy.jpg') center/cover no-repeat;
       color: #fff;
       text-shadow: 0 1px 3px rgba(0,0,0,0.5);
       padding: 3rem 1rem;
@@ -53,19 +40,22 @@
       font-size: 1.1rem;
       opacity: 0.9;
     }
+
     .summary-card {
       background-color: rgba(255,255,255,0.85) !important;
       border-left: 0.5rem solid var(--bs-primary);
     }
-    /* --- Section Headers Now Bigger & Bold --- */
+
+    /* --- Bigger, bolder section headers --- */
     h2.section-header {
       font-family: 'Scheherazade', serif;
       color: var(--bs-primary);
       border-bottom: 2px solid var(--bs-primary);
       padding-bottom: 0.5rem;
-      font-size: 1.75rem;  /* was ~1.25rem */
-      font-weight: 700;
+      font-size: 2rem;
+      font-weight: 800;
     }
+
     .btn-primary {
       background-color: var(--bs-primary);
       border-color: var(--bs-primary);
@@ -88,7 +78,7 @@
   <!-- HEADER -->
   <header class="text-center">
     <h1>Bay Area Ziyarah Trip 2025/2026</h1>
-    <p>December 24 &ndash; January 11 &mdash; SFO via Turkish Airlines</p>
+    <p>December 24 – January 11 — SFO via Turkish Airlines</p>
   </header>
 
   <div class="container">
@@ -107,7 +97,7 @@
       </div>
     </div>
 
-    <!-- REGISTRATION FORM -->
+    <!-- FORM -->
     <form id="ziyarahForm" class="needs-validation" novalidate
           action="https://script.google.com/macros/s/AKfycbx…XYZ/exec"
           method="POST"
@@ -118,18 +108,17 @@
         <div class="card-body">
           <h2 class="section-header mb-3">1. Personal Information</h2>
           <div class="row g-3">
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="fullName" class="form-label">Full Name</label>
               <input type="text" class="form-control" id="fullName" name="fullName" required>
               <div class="invalid-feedback">Full name is required.</div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="dateOfBirth" class="form-label">Date of Birth</label>
               <input type="text" class="form-control flatpickr" id="dateOfBirth" name="dateOfBirth" required placeholder="YYYY-MM-DD">
               <div class="invalid-feedback">Please choose your date of birth.</div>
             </div>
-
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="gender" class="form-label">Gender</label>
               <select class="form-select" id="gender" name="gender" required>
                 <option value="" disabled selected>Choose…</option>
@@ -139,34 +128,32 @@
               </select>
               <div class="invalid-feedback">Please select a gender.</div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="address" class="form-label">Street Address</label>
               <input type="text" class="form-control" id="address" name="address" required>
               <div class="invalid-feedback">Street address is required.</div>
             </div>
-
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <label for="city" class="form-label">City</label>
               <input type="text" class="form-control" id="city" name="city" required>
               <div class="invalid-feedback">City is required.</div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <label for="state" class="form-label">State</label>
               <input type="text" class="form-control" id="state" name="state" required>
               <div class="invalid-feedback">State is required.</div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <label for="zip" class="form-label">Zip / Postal Code</label>
               <input type="text" class="form-control" id="zip" name="zip" required>
               <div class="invalid-feedback">ZIP code is required.</div>
             </div>
-
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="phone" class="form-label">Phone Number</label>
               <input type="tel" class="form-control" id="phone" name="phone" required placeholder="(123) 456-7890">
               <div class="invalid-feedback">Phone number is required.</div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="email" class="form-label">Email Address</label>
               <input type="email" class="form-control" id="email" name="email" required placeholder="you@example.com">
               <div class="invalid-feedback">Valid email is required.</div>
@@ -180,17 +167,16 @@
         <div class="card-body">
           <h2 class="section-header mb-3">2. Passport & Photo</h2>
           <div class="row g-3">
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="passportNumber" class="form-label">Passport Number</label>
               <input type="text" class="form-control" id="passportNumber" name="passportNumber" required>
               <div class="invalid-feedback">Passport number is required.</div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="passportExpiry" class="form-label">Passport Expiry</label>
               <input type="text" class="form-control flatpickr" id="passportExpiry" name="passportExpiry" required placeholder="YYYY-MM-DD">
               <div class="invalid-feedback">Expiry date is required.</div>
             </div>
-
             <div class="col-12">
               <label for="passportPhoto" class="form-label">Passport Photo (JPEG/PNG, ≤5 MB)</label>
               <input class="form-control" type="file" id="passportPhoto" name="passportPhoto"
@@ -207,24 +193,24 @@
         <div class="card-body">
           <h2 class="section-header mb-3">3. Emergency Contact</h2>
           <div class="row g-3">
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <label for="emergencyName" class="form-label">Name</label>
               <input type="text" class="form-control" id="emergencyName" name="emergencyName" required>
               <div class="invalid-feedback">Name is required.</div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <label for="emergencyRelationship" class="form-label">Relationship</label>
               <input type="text" class="form-control" id="emergencyRelationship" name="emergencyRelationship" required>
               <div class="invalid-feedback">Relationship is required.</div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-xl-4">
               <label for="emergencyPhone" class="form-label">Phone</label>
               <input type="tel" class="form-control" id="emergencyPhone" name="emergencyPhone" required>
               <div class="invalid-feedback">Phone is required.</div>
             </div>
             <div class="col-12">
               <label for="emergencyAddress" class="form-label">Address</label>
-              <input type="text" class="form-control" id="emergencyAddress" name="emergencyAddress" required>
+              <input type="text" class="form.control" id="emergencyAddress" name="emergencyAddress" required>
               <div class="invalid-feedback">Address is required.</div>
             </div>
           </div>
@@ -241,11 +227,11 @@
                       placeholder="If none, write ‘N/A’"></textarea>
           </div>
           <div class="row g-3">
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="dietaryRestrictions" class="form-label">Dietary Restrictions</label>
               <input type="text" class="form-control" id="dietaryRestrictions" name="dietaryRestrictions">
             </div>
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="roommatePref" class="form-label">Roommate Preference</label>
               <input type="text" class="form-control" id="roommatePref" name="roommatePref">
             </div>
@@ -258,7 +244,7 @@
         <div class="card-body">
           <h2 class="section-header mb-3">5. Trip Details & Options</h2>
           <div class="row g-3">
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="departureAirport" class="form-label">Departure Airport</label>
               <select class="form-select" id="departureAirport" name="departureAirport" required>
                 <option value="" disabled selected>Choose…</option>
@@ -269,11 +255,11 @@
               </select>
               <div class="invalid-feedback">Please pick an airport.</div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="otherAirport" class="form-label">If Other, specify</label>
               <input type="text" class="form-control" id="otherAirport" name="otherAirport" placeholder="e.g. LAX">
             </div>
-            <div class="col-lg-6">
+            <div class="col-xl-6">
               <label for="travelInsurance" class="form-label">Travel Insurance?</label>
               <select class="form-select" id="travelInsurance" name="travelInsurance" required>
                 <option value="" disabled selected>Choose…</option>
@@ -283,116 +269,3 @@
               <div class="invalid-feedback">Please select an option.</div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <!-- 6. Payment Details -->
-      <div class="card mb-4 shadow-sm border-start border-4 border-primary">
-        <div class="card-body">
-          <h2 class="section-header mb-3">6. Payment Details</h2>
-          <p class="small text-muted">
-            Deposit: <strong>$500</strong>. Balance: <del>$3,450</del> by October 15, 2025.
-          </p>
-          <div class="row g-3">
-            <div class="col-lg-6">
-              <label for="paymentMethod" class="form-label">Payment Method</label>
-              <select class="form-select" id="paymentMethod" name="paymentMethod" required>
-                <option value="" disabled selected>Choose…</option>
-                <option>Credit Card</option>
-                <option>ACH / Bank Transfer</option>
-                <option>Check</option>
-                <option>Zelle</option>
-                <option>Other</option>
-              </select>
-              <div class="invalid-feedback">Method required.</div>
-            </div>
-            <div class="col-lg-6">
-              <label for="depositAmount" class="form-label">Deposit Amount ($)</label>
-              <input type="number" class="form-control" id="depositAmount" name="depositAmount"
-                     min="500" max="3950" step="0.01" value="500" required>
-              <div class="invalid-feedback">Deposit must be ≥ 500.</div>
-            </div>
-            <div class="col-12">
-              <label for="paymentDetails" class="form-label">Additional Info</label>
-              <input type="text" class="form-control" id="paymentDetails" name="paymentDetails"
-                     placeholder="e.g. Zelle TXN #123456">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- 7. Terms & Signature -->
-      <div class="card mb-4 shadow-sm border-start border-4 border-primary">
-        <div class="card-body">
-          <h2 class="section-header mb-3">7. Terms & Signature</h2>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="agreeTerms" name="agreeTerms" required>
-            <label class="form-check-label" for="agreeTerms">
-              I agree to pay the remaining balance by October 15, 2025.
-            </label>
-            <div class="invalid-feedback">You must agree before submitting.</div>
-          </div>
-          <div class="mb-3">
-            <label for="signature" class="form-label">e-Signature (Full Name)</label>
-            <input type="text" class="form-control" id="signature" name="signature"
-                   placeholder="e.g. John Smith" required>
-            <div class="invalid-feedback">Signature required.</div>
-          </div>
-        </div>
-      </div>
-
-      <!-- SUBMIT BUTTON -->
-      <button type="submit" class="btn btn-primary w-100 mb-5">Submit Registration</button>
-    </form>
-
-    <!-- FOOTER -->
-    <footer class="text-center">
-      <hr>
-      <p class="small text-muted">May Allah grant us a safe & blessed journey ✨</p>
-    </footer>
-  </div>
-
-  <!-- Bootstrap Bundle JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-  ></script>
-  <!-- Flatpickr JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.js"
-  ></script>
-  <script>
-    // Initialize Flatpickr
-    flatpickr(".flatpickr", {
-      dateFormat: "Y-m-d",
-      allowInput: true
-    });
-
-    // Bootstrap form validation
-    (function() {
-      "use strict";
-      const form = document.getElementById("ziyarahForm");
-      form.addEventListener("submit", function(event) {
-        if (!form.checkValidity()) {
-          event.preventDefault();
-          event.stopPropagation();
-        }
-        form.classList.add("was-validated");
-      }, false);
-    })();
-
-    // Passport-photo preview
-    document.getElementById("passportPhoto")
-      .addEventListener("change", function() {
-        const [file] = this.files;
-        const preview = document.getElementById("passportPreview");
-        if (file) {
-          preview.src = URL.createObjectURL(file);
-          preview.classList.remove("d-none");
-        } else {
-          preview.src = "";
-          preview.classList.add("d-none");
-        }
-      });
-  </script>
-</body>
-</html>
