--- a/Ziyarat.html
+++ b/Ziyarat.html
@@ -21,7 +21,7 @@
     }
     body {
       font-family: 'Amiri', serif;
-      background: url('https://i.imgur.com/ZOo6X3Z.png') center/150px repeat;
+      background: url('') center/150px repeat;
       color: #333;
       padding: 1rem 0;
     }
